--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,8 +34,10 @@
     <string name="card_application_body_selected">Selected:</string>
     <string name="card_logs_body">Click here to view patcher logs.</string>
     <string name="card_credits_body">Click here to view people who have contributed to the ReVanced Project.</string>
-    <string name="loading_body">One moment, please...</string>
+    <string name="loading_body">One moment, please…</string>
     <string name="loading_fetching_patches">Fetching patches</string>
+    <string name="unsupported">Unsupported version</string>
+    <string name="only_compatible">This patch is only compatible with version:</string>
     <string name="card_announcement_button_changelog">Changelog</string>
     <string name="button_patch">Patch</string>
     <string name="navigation_dashboard">Dashboard</string>
